<resources>
    <string name="app_name">Event Timer</string>
    <string name="title_activity_entry">Enter times</string>
    <string name="file_format">vAn11</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="MenuSecondTitle"><![CDATA[Help & Feedback]]></string>
    <string name="title_menu_enter">Enter times</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->


    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_location_summary">CP location. This is also used as the save file name</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_manage">Manage Competition Numbers</string>
    <string name="pref_header_classify">Classify Vehicles</string>
    <string name="pref_location_default">Checkpoint1</string>
    <string name="pref_location_title">Checkpoint location</string>
    <string name="pref_location_hint">Enter the location name</string>
    <string name="pref_timekeeper_default">ABC</string>
    <string name="pref_timekeeper_title">Timekeepers initials</string>
    <string name="pref_timekeeper_summary">Initials of the timekeeper</string>
    <string name="pref_timekeeper_hint">Enter your initials</string>
    <string name="pref_event_type_title">Competition for:-</string>
    <string name="pref_maxNumber_title">Highest Comp. Number</string>
    <string name="pref_maxNumber_default">40</string>
    <string name="pref_classifyAge_title">Vehicle Class</string>
    <string name="pref_classifySize_title">Vehicle size</string>
    <string-array name="pref_event_type_titles">
        <item>All vehicles</item>
        <item>Autocars</item>
        <item>Motorcycles</item>
        <item>Bicycles</item>
        <item>On foot</item>
    </string-array>
    <string-array name="pref_event_type_values">
        <item>All</item>
        <item>Car</item>
        <item>Motorcycle</item>
        <item>Bicycle</item>
        <item>Walker</item>
    </string-array>
    <string-array name="pref_classify_age_titles">
        <item>All</item>
        <item>Veteran</item>
        <item>Vintage</item>
        <item>Post Vintage</item>
        <item>Classic</item>
    </string-array>
    <string-array name="pref_classify_age_values">
        <item>All</item>
        <item>Veteran</item>
        <item>Vintage</item>
        <item>Post Vintage</item>
        <item>Classic</item>
    </string-array>
    <string-array name="pref_classify_size_titles">
        <item>All</item>
        <item>Combinations</item>
        <item>Lightweights</item>
        <item>Standard</item>
        <item>Heavy</item>
        <item>Two stroke</item>
        <item>Other</item>
    </string-array>
    <string-array name="pref_classify_size_values">
        <item>All</item>
        <item>Combination</item>
        <item>Lightweight</item>
        <item>Standard</item>
        <item>Heavy</item>
        <item>2 Stroke</item>
        <item>other</item>
    </string-array>
    <string name="title_activity_about">AboutActivity</string>
    <string name="enternumber_edittext_hint">Enter comp. number(s)</string>
    <string name="filename_heading">FILENAME</string>
    <string name="file_instructions">Edit the filename and then click on the \'SAVE\' button\n
    to save to this file</string>
    <string name="delete_question">Do you want to delete all current records</string>
    <string name="filesave_btn_caption">SAVE</string>
    <string name="before_filesave">Saving to file will take a few seconds</string>
    <string name="whilefilesave">Saving ....please wait</string>
    <string name="save_success">Data saved successfully</string>
    <string name="delete_btn_caption">DELETE</string>
    <string name="notDel_btn_caption">KEEP</string>
    <string name="title_filesave_activity">Export timings to text file</string>
    <string name="title_listactivity">Current recorded timings</string>
    <string name="title_for_main_content">Historic Vehicle Regularity Timer</string>
    <string name="blank">     </string>
    <string name="help_instructions_text">
    This App can be used to record checkpoint or stage times for up to 100 competitors in Historic Vehicle
    Regulatory events.\n\n
    Using the Settings, you can set the name or location  of the checkpoint , the initials of the
        timekeeper and the type of event, i.e. for Cars, Motorcycles etc. It is also possible to classify
    the vehicles by class, (Veteran , Vintage etc.), and also to further sub-divide vehicles ( into lightweight, 2 stroke, etc. )
    \n\n
    The app will accept any number for the competition number. However, in the Settings, you can  set the App to  manage the
        entry numbers. This allows you to set the highest valid entry number and you can then decide how to handle out of
        range and duplicate numbers.\n\n
    The times recorded on each competitor can be viewed in a list and can also be exported to a text file\n\n
    Full instruction can be requested by emailing to :spiddalsoftware@gmail.com\n\n
    To get started you can swipe from the left or select the menu button</string>
    <string name="about_text">Event Timer App for Android\n\n</string>
    <string name="aboutActivitytitle">About EventTimer App.</string>
    <string name="menu_dbase_text">Current timings</string>
    <string name="menu_export_text">Export to text file</string>
    <string name="nemu_settings">Settings</string>
    <string name="menu_help_text">Help</string>
    <string name="menu_about_title">About</string>
    <string name="company">Gerard O\'Toole, Spiddal, Ireland</string>
    <string name="emailaddress">SpiddalSoftware@gmail.com</string>
    <string name="current_setting">Current Application Settings\n\n</string>
    <string name="currentlocation">"Checkpoint Name/Location : "</string>
    <string name="currenttimekeeper">"TimeKeeper initials      : "</string>
    <string name="currenteventtype">"Event for  vehicles of   : "</string>
    <string name="current_ismanaged_true">The App. is set to  manage the competitor entry numbers</string>
    <string name="current_ismanaged_false">The App. is set not to  manage the competitor entry numbers therefore any numbers will be acceptable</string>
    <string name="current_highest">"The highest entry number is set to "</string>
    <string name="current_OOR_accept">" but numbers above this are accepted(with a warning).\n"</string>
    <string name="current_OOR_reject">" and numbers above this will be rejected.\n"</string>
    <string name="current_DUP_accept">" Duplicate number entries are accepted(with a warning)\n"</string>
    <string name="current_DUP_reject">" Duplicate numbers will be rejected.\n"</string>
    <string name="current_isclassified_true">Vehicles are classified by the App.</string>
    <string name="current_isclassified_false">Vehicles are not classified by the App.</string>
    <string name="current_class">"Vehicle Class = "</string>
    <string name="current_size">"Vehicle Size  = "</string>
    <string name="settings_can_be_changed">All these settings can be changes in the Preference Settings.\n</string>
</resources>
