<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- this activity was modified from the standard settings activity from v23 -->

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_location_default"
        android:inputType="textCapWords"
        android:key="location_pref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_location_title"
        android:summary="@string/pref_location_summary"
        android:hint="@string/pref_location_hint"/>

    <EditTextPreference
        android:capitalize="characters"
        android:defaultValue="@string/pref_timekeeper_default"
        android:inputType="textCapCharacters"
        android:maxLength="4"
        android:key="timekeeper_pref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_timekeeper_title"
        android:summary="@string/pref_timekeeper_summary"
        android:hint="@string/pref_timekeeper_hint"/>

    <ListPreference
        android:key="event_type_pref"
        android:title="@string/pref_event_type_title"
        android:entries="@array/pref_event_type_titles"
        android:entryValues="@array/pref_event_type_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:defaultValue="-1"/>


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
