<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ie.spiddalsoftware.gearoid.eventtimer.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_nature_people_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="ie.spiddalsoftware.gearoid.eventtimer.SettingsActivity$ManagePreferenceFragment"
        android:icon="@drawable/ic_filter_9_plus_24dp"
        android:title="@string/pref_header_manage" />

    <header
        android:fragment="ie.spiddalsoftware.gearoid.eventtimer.SettingsActivity$ClassifyPreferenceFragment"
        android:icon="@drawable/ic_directions_bike_24dp"
        android:title="@string/pref_header_classify" />

</preference-headers>
